@@ -1,0 +1,39 @@
+//-----------------------------------------------------------------------------
+//
+//	MONOGRAM GraphStudio
+//
+//	Author : Igor Janos
+//
+//-----------------------------------------------------------------------------
+#pragma once
+
+namespace GraphStudio
+{
+
+	//-------------------------------------------------------------------------
+	//
+	//	Some additional media types
+	//
+	//-------------------------------------------------------------------------
+
+	// {000000FF-0000-0010-8000-00AA00389B71}
+	static const GUID MEDIASUBTYPE_AAC =
+	{ 0x000000ff, 0x0000, 0x0010, { 0x80, 0x00, 0x00, 0xaa, 0x00, 0x38, 0x9b, 0x71 } };
+
+	// {000001FF-0000-0010-8000-00AA00389B71}
+	static const GUID MEDIASUBTYPE_LATM_AAC =
+	{ 0x000001ff, 0x0000, 0x0010, { 0x80, 0x00, 0x00, 0xaa, 0x00, 0x38, 0x9b, 0x71 } };
+	
+	// {726D6173-0000-0010-8000-00AA00389B71}
+	static const GUID MEDIASUBTYPE_AMR =
+	{ 0x726D6173, 0x0000, 0x0010, { 0x80, 0x00, 0x00, 0xaa, 0x00, 0x38, 0x9b, 0x71 } };
+
+
+
+
+
+
+
+
+
+};
